# my-rusty-computer

./: .gitignore  Cargo.toml  LICENSE  README.md  cmp.sh
.github/workflows/: quickstart.yml
bins/display/: Cargo.toml
bins/display/src/: main.rs
bins/ds_reader/: Cargo.toml  data_sheet.txt
bins/ds_reader/src/: main.rs  parser.rs
bins/gen_test_bin/: Cargo.toml
bins/gen_test_bin/src/: main.rs
bins/gui_test/: Cargo.toml
bins/gui_test/src/: main.rs
bins/led_show/: .gitignore  Cargo.toml  build.rs
bins/led_show/assets/: main.asm
bins/led_show/src/: main.rs  panel.rs  screen.rs
bins/mrc_asm/: Cargo.toml
bins/mrc_asm/src/: main.rs
bins/mrc_dis/: Cargo.toml
bins/mrc_dis/src/: main.rs
bins/mrc_emu/: Cargo.toml  build.rs
bins/mrc_emu/ext/mrc_bios/: bios.asm  cpu_test.asm
bins/mrc_emu/src/: config.rs  cpu.rs  debugger.rs  dos.rs  emulator.rs  interrupts.rs  main.rs  memory.rs  monitor.rs  video.rs
bins/mrc_emu/src/component/: dma.rs  mod.rs  pic.rs  pit.rs  ram.rs  rom.rs
bins/mrc_emu/src/components/: cga.rs  dma.rs  keyboard.rs  mod.rs  pic.rs  pit.rs  ppi.rs
bins/mrc_emu/src/cpu/operations/: arithmetic.rs  logic.rs  mod.rs  rol.rs  shift_left.rs  shift_right.rs  sub.rs  test.rs
bins/mz_inspect/: Cargo.toml
bins/mz_inspect/src/: main.rs
bins/pop/: Cargo.toml
bins/pop/src/: main.rs
bins/romcheck/: Cargo.toml
bins/romcheck/src/: main.rs
bins/simple_cpu/: Cargo.toml
bins/simple_cpu/src/: main.rs
bins/tests/: Cargo.toml
bins/tests/src/: main.rs
crates/data_sheet/: Cargo.toml
crates/data_sheet/src/: flatten.rs  lib.rs  parser.rs
crates/mrc_assembler/: Cargo.toml  README.md
crates/mrc_assembler/src/: ast.rs  input.rs  lexer.rs  lib.rs  lines.rs  source.rs  tokenizer.rs
crates/mrc_assembler/src/lexer/: cursor.rs  mod.rs
crates/mrc_assembler/src/parser/: ast.rs  base.rs  combinators.rs  instructions.rs  lines.rs  mod.rs  source.rs  tokens.rs
crates/mrc_compiler/: Cargo.toml  build.rs
crates/mrc_compiler/src/: assemble.rs  ast.rs  compiler.rs  diagnostics.rs  lexer.rs  lib.rs  operations.rs  parser.rs
crates/mrc_compiler/tests/: calljmp.asm  curpos.asm  ea.asm  each.asm  group1.asm  imul.asm  incdec.asm
crates/mrc_decoder/: Cargo.toml  README.md
crates/mrc_decoder/src/: _decode_tests.rs  common.rs  decode.rs  decode2.rs  errors.rs  lib.rs  mod_reg_rm.rs  modrm.rs  mrrm.rs  reader.rs  traits.rs
crates/mrc_display/: Cargo.toml
crates/mrc_display/src/: lib.rs
crates/mrc_dos/: Cargo.toml  README.md
crates/mrc_dos/src/: mz.rs
crates/mrc_emulator/: Cargo.toml  README.md
crates/mrc_emulator/src/: builder.rs  bus.rs  debugger.rs  dma.rs  error.rs  io.rs  irq.rs  lib.rs  pic.rs  pit.rs  ram.rs  rom.rs  shared.rs  swmr.rs  timer.rs
crates/mrc_emulator/src/components/: cga.rs  dma.rs  keyboard.rs  mod.rs  pic.rs  pit.rs  ppi.rs  ram.rs  rom.rs
crates/mrc_emulator/src/cpu/: calc2.rs  mod.rs  ops.rs  state.rs
crates/mrc_emulator/src/cpu/calc/: arithmetic.rs  mod.rs
crates/mrc_emulator/src/cpu/executor/: mod.rs
crates/mrc_emulator/src/cpu/executor/operations/: arithmetic.rs  logic.rs  mod.rs  string.rs
crates/mrc_emulator/src/cpu2/: calc.rs  calc2.rs  mod.rs  mrrm.rs  ops.rs  tests.asm
crates/mrc_emulator/src/cpu2/calc/: logic.rs
crates/mrc_encoder/: Cargo.toml  README.md
crates/mrc_encoder/src/: codes.rs  emitter.rs  lib.rs  op_flags.rs  template.rs  templates.rs
crates/mrc_instruction/: Cargo.toml  README.md  build.rs
crates/mrc_instruction/src/: address.rs  data.rs  db.rs  db2.rs  display.rs  instruction.rs  lib.rs  operand.rs  operation.rs  operation2.rs  register.rs
crates/mrc_parser/: Cargo.toml
crates/mrc_parser/src/: ast.rs  lib.rs  parser.rs
crates/mrc_screen/: Cargo.toml  README.md
crates/mrc_screen/src/: lib.rs
crates/mrc_x86/: Cargo.toml
crates/mrc_x86/src/: lib.rs  printer.rs
samples/: avgargs.asm  call.asm  disp.asm  jumps.asm  snake.asm  strcmp.asm  test.asm
samples/dos/: vcls.asm
samples/dosbox/: .gitignore  run.sh  sample.cfg  test.asm
samples/test/: ea.asm
src/: data_reader.rs  decoder.rs  instruction.rs  instructions.rs  lib.rs  main.rs
src/decoder/: decode.rs  errors.rs  mod.rs  mod_rm.rs  modrm.rs
src/decoder/operations/: mod.rs
src/disassembler/: mod.rs
src/instructions/: mod.rs
tools/vscode/mrc/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
(+28 files in other folders)
