[workspace]
resolver = "2"
members = [
    "bins/ds_reader",
    "bins/gen_test_bin",
    "bins/led_show",
    "bins/mrc_asm",
    "bins/mrc_dis",
    "bins/mrc_emu",
    "bins/mz_inspect",
    "bins/pop",
    "bins/romcheck",
    "bins/tests",
    "crates/data_sheet",
    "crates/mrc_compiler",
    "crates/mrc_decoder",
    "crates/mrc_dos",
    "crates/mrc_emulator",
    "crates/mrc_encoder",
    "crates/mrc_instruction",
    "crates/mrc_screen",
]
