[workspace]
resolver = "2"
members = [
    "bins/ds_reader",
    "bins/gen_test_bin",
    "bins/mrc_asm",
    "bins/mrc_dis",
    "bins/mrc_emu",
    "bins/mz_inspect",
    "bins/romcheck",
    "bins/tests",
    "crates/data_sheet",
    "crates/mrc_compiler",
    "crates/mrc_decoder",
    "crates/mrc_dos",
    "crates/mrc_emulator",
    "crates/mrc_encoder",
    "crates/mrc_instruction",
    # "crates/mrc_screen",
]

[workspace.dependencies]
tracing-subscriber = "0.3.18"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
