[package]
name = "mrc-emu"
version = "0.0.1"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
clap = "2"
glium = "*"
global = "0.4"
glutin = "*"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
mrc_decoder = { path = "../../crates/mrc_decoder" }
mrc_dos = { path = "../../crates/mrc_dos" }
mrc_emulator = { path = "../../crates/mrc_emulator" }
mrc_screen = { path = "../../crates/mrc_screen" }
mrc_x86 = { path = "../../crates/mrc_x86" }
pretty_env_logger = "0.4"
