[package]
name = "mrc-emu"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing-subscriber.workspace = true
tracing.workspace = true

bitflags = "1.3.2"
clap = { version = "4.5.18", features = ["derive"] }
dirs = "4.0"
mrc_decoder = { path = "../../crates/mrc_decoder" }
mrc_dos = { path = "../../crates/mrc_dos" }
mrc_emulator = { path = "../../crates/mrc_emulator" }
mrc_instruction = { path = "../../crates/mrc_instruction" }
# mrc_screen = { path = "../../crates/mrc_screen" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
