[package]
name = "pop"
version = "0.1.0"
authors = ["Tiaan Louw <tiaanl@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
mrc_dos = { path = "../../crates/mrc_dos" }
mrc_emulator = { path = "../../crates/mrc_emulator" }
mrc_instruction = { path = "../../crates/mrc_instruction" }
pretty_env_logger = "0.4"
structopt = "0.3"
