[package]
name = "mrc_emulator"
version = "0.0.1"
edition = "2021"

[dependencies]
bitflags = "1.3"
egui = "0.17"
egui_glium = "0.17"
env_logger = "0.9"
glium = "0.31"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
mrc_decoder = { path = "../mrc_decoder" }
mrc_instruction = { path = "../mrc_instruction" }
pretty_env_logger = "0.4"
