[package]
name = "mrc_emulator"
version = "0.0.1"
edition = "2021"

[dependencies]
bitflags = "1.3"
mrc_decoder = { path = "../mrc_decoder" }
mrc_instruction = { path = "../mrc_instruction" }
tracing.workspace = true

[dev-dependencies]
mrc_compiler = { path = "../mrc_compiler" }
tracing-subscriber.workspace = true
